--- a/src/main/webapp/WEB-INF/view/admin/directories/towns/details.html
+++ b/src/main/webapp/WEB-INF/view/admin/directories/towns/details.html
@@ -8,7 +8,8 @@
 
     <link rel="stylesheet" th:href="@{/webjars/bootstrap/4.6.0/css/bootstrap.min.css}"/>
     <script type="text/javascript" th:src="@{/webjars/jquery/3.5.1/jquery.min.js/}"></script>
-    <script type="text/javascript" th:src="@{/webjars/bootstrap/4.6.0/js/bootstrap.min.js}"></script>
+    <script type="text/javascript"
+            th:src="@{/webjars/bootstrap/4.6.0/js/bootstrap.min.js}"></script>
 
     <link rel="stylesheet" th:href="@{/css/style.css}"/>
     <style>
@@ -45,22 +46,25 @@
 <div th:replace="fragments/menu-staff :: #menustaff"></div>
 <!--/*@thymesVar id="town" type="ru.spbu.distolymp.dto.admin.directories.towns.TownDetailsDto"*/-->
 <h3>Город
-    <a href="#" class="stealth"><strong th:text="${town.name}">Town_name</strong></a>
+    <a th:href="@{/towns/list}" class="stealth"><strong
+            th:text="${town.name}">Town_name</strong></a>
 </h3>
 
 <ul class="nav nav-tabs justify-content-center" id="towns-tab" role="tablist">
     <li class="nav-item" role="presentation">
-        <a class="nav-link text-dark" id="schools-tab" data-toggle="tab" href="#schools" role="tab"
+        <a class="nav-link active text-dark" id="schools-tab" data-toggle="tab" href="#schools"
+           role="tab"
            aria-controls="schools" aria-selected="true">Учебные заведения</a>
     </li>
     <li class="nav-item" role="presentation">
-        <a class="nav-link active text-dark" id="info-tab" data-toggle="tab" href="#info" role="tab"
+        <a class="nav-link text-dark" id="info-tab" data-toggle="tab" href="#info" role="tab"
            aria-controls="info" aria-selected="false">Информация</a>
     </li>
 </ul>
 
 <div class="tab-content" id="townsTabContent">
-    <div class="tab-pane fade mb-2" id="schools" role="tabpanel" aria-labelledby="schools-tab">
+    <div class="tab-pane fade active show " id="schools" role="tabpanel"
+         aria-labelledby="schools-tab">
         <h3 id="school-table-desc" class="mt-2 mb-2">Учебные заведения города
             <strong th:text="${town.name}">Town_name</strong></h3>
         <table class="border" style="margin:0.5em auto" aria-describedby="school-table-desc">
@@ -72,10 +76,12 @@
             <tr th:each="school, iter : ${town.schools}">
                 <td th:text="${iter.index + 1}">#</td>
                 <td>
-                    <a href="#" class="stealth" th:text="${school.number}">Number</a>
+                    <a th:href="@{/schools/details/{id}(id=${school.id})}" class="stealth"
+                       th:text="${school.number}">Number</a>
                 </td>
                 <td>
-                    <a href="#" class="stealth" th:text="${school.title}">Title</a>
+                    <a th:href="@{/schools/details/{id}(id=${school.id})}" class="stealth"
+                       th:text="${school.title}">Title</a>
                 </td>
             </tr>
         </table>
@@ -86,18 +92,21 @@
         </ul>
     </div>
 
-    <div class="tab-pane show active fade " id="info" role="tabpanel" aria-labelledby="info-tab">
-        <h3 class="mt-2 mb-2">Информация о городе <strong th:text="${town.name}">Town_name</strong></h3>
+    <div class="tab-pane fade mb-2" id="info" role="tabpanel" aria-labelledby="info-tab">
+        <h3 class="mt-2 mb-2">Информация о городе <strong th:text="${town.name}">Town_name</strong>
+        </h3>
         <div class="infoForm">
             <fieldset>
                 <legend>Город</legend>
                 <div class="property">
                     <label>Страна:</label>
-                    <span th:text="${town.countryName}"></span>
+                    <a th:href="@{/countries/details/{id}(id=${town.region.country.id})}"
+                       th:text="${town.region.country.name}" class="stealth"></a>
                 </div>
                 <div class="property">
                     <label>Регион РФ:</label>
-                    <span th:text="${town.regionName}"></span>
+                    <a th:href="@{/regions/details/{id}(id=${town.region.id})}"
+                       th:text="${town.region.name}" class="stealth"></a>
                 </div>
                 <div class="property">
                     <label>Город:</label>
@@ -123,5 +132,4 @@
 
 <div th:replace="fragments/footer :: #footer"></div>
 </body>
-
 </html>
