--- a/src/main/webapp/WEB-INF/view/admin/directories/towns/details.html
+++ b/src/main/webapp/WEB-INF/view/admin/directories/towns/details.html
@@ -118,7 +118,7 @@
                 </div>
                 <div class="property">
                     <label>Добавление районов:</label>
-                    <span th:text="${town.editable ? 'открыто' : 'закрыто'}"></span>
+                    <span th:text="${town.editing ? 'открыто' : 'закрыто'}"></span>
                 </div>
             </fieldset>
         </div>
