--- a/src/main/webapp/WEB-INF/view/admin/directories/towns/edit.html
+++ b/src/main/webapp/WEB-INF/view/admin/directories/towns/edit.html
@@ -66,8 +66,8 @@
             </select>
             <br/>
 
-            <label for="editable">Добавление районов:</label>
-            <select th:field="*{editable}" id="editable">
+            <label for="editing">Добавление районов:</label>
+            <select th:field="*{editing}" id="editing">
                 <option th:value="true" th:text="открыто"></option>
                 <option th:value="false" th:text="закрыто"></option>
             </select>
