--- a/src/main/webapp/WEB-INF/view/admin/directories/schools/details.html
+++ b/src/main/webapp/WEB-INF/view/admin/directories/schools/details.html
@@ -43,12 +43,12 @@
 <body class="bgGrey">
 
 <div th:replace="fragments/menu-staff :: #menustaff"></div>
-<!--/*@thymesVar id="country" type="ru.spbu.distolymp.dto.admin.directories.schools.SchoolDetailsDto"*/-->
+<!--/*@thymesVar id="school" type="ru.spbu.distolymp.dto.admin.directories.schools.SchoolDetailsDto"*/-->
 <h3>Учебное заведение
     <a href="#" class="stealth"><strong th:text="${school.title}">Школа</strong></a>
 </h3>
 
-<ul class="nav nav-tabs justify-content-center" id="countries-tab" role="tablist">
+<ul class="nav nav-tabs justify-content-center" id="schools-tab" role="tablist">
     <li class="nav-item" role="presentation">
         <a class="nav-link text-dark" id="groups-tab" data-toggle="tab" href="#groups" role="tab"
            aria-controls="groups" aria-selected="true">Группы</a>
@@ -85,7 +85,7 @@
         </table>
     </div>
 
-    <div class="tab-pane show active fade " id="info" role="tabpanel" aria-labelledby="info-tab">
+    <div class="tab-pane show active fade" id="info" role="tabpanel" aria-labelledby="info-tab">
         <h3 class="mt-2 mb-2">Информация об учебном заведении <strong th:text="${school.title}">Школа</strong></h3>
         <div class="infoForm">
             <fieldset>
@@ -130,7 +130,7 @@
         </div>
         <ul class="actions">
             <li>
-                <a th:href="@{/schools/edit/{id}(id=${school.schoolId})}" class="abuton">Редактировать</a>
+                <a th:href="@{/schools/edit/{id}(id=${school.schoolId})}" class="abutton">Редактировать</a>
             </li>
         </ul>
     </div>
