Add link to tasks

--- a/src/main/webapp/WEB-INF/view/fragments/menu-staff.html
+++ b/src/main/webapp/WEB-INF/view/fragments/menu-staff.html
@@ -9,7 +9,7 @@
         <a href="#">Тесты</a>
     </li>
     <li>
-        <a href="#">Задачи</a>
+        <a th:href="@{/tasks/list}">Задачи</a>
     </li>
     <li>
         <a href="#">Преподаватели</a>
