Some html fixing

--- a/src/main/webapp/WEB-INF/view/admin/tasks/list.html
+++ b/src/main/webapp/WEB-INF/view/admin/tasks/list.html
@@ -45,7 +45,7 @@
     <fieldset>
         <legend>Поиск задач</legend>
         <div class="searchForm">
-            <label for="task-title">Задача:</label>
+            <label for="task-title">Заголовок:</label>
             <input type="text" id="task-title" class="w-50"/><br/>
 
             <div class="input-group" style="align-items: center">
