Bug fix: added prefix

--- a/src/main/webapp/WEB-INF/view/admin/tasks/tasks-table.html
+++ b/src/main/webapp/WEB-INF/view/admin/tasks/tasks-table.html
@@ -12,14 +12,14 @@
         <!--/*@thymesVar id="taskList" type="java.util.List<ru.spbu.distolymp.dto.admin.tasks.tasks.TaskListDto>"*/-->
         <tr th:each="task, iter : ${taskList}">
             <td th:text="${iter.index + 1}"></td>
-            <td th:text="${task.title}"></td>
-            <td th:text="${task.status}"></td>
-            <td th:if="${task.status} == 'Архив'" style="text-align: center">
+            <td th:text="${task.prefix} + ':&#13' + ${task.title}" style="white-space: pre; vertical-align: middle"></td>
+            <td th:text="${task.status}" style="text-align: center; vertical-align: middle"></td>
+            <td th:if="${task.status} == 'Архив'" style="text-align: center; vertical-align: middle">
                 <a href="#" class="abutton">просмотр</a>
                 <a href="#" class="abutton"
                    onclick="return window.confirm('Вы уверены?')">разархивировать</a>
             </td>
-            <td th:unless="${task.status} == 'Архив'" style="text-align: center">
+            <td th:unless="${task.status} == 'Архив'" style="text-align: center; vertical-align: middle">
                 <a href="#" class="abutton">просмотр</a>
                 <a href="#" class="abutton">редактировать</a>
                 <a href="#" class="abutton">копировать</a>
