Added support for creating new tasks

--- a/src/main/webapp/WEB-INF/view/admin/tasks/list.html
+++ b/src/main/webapp/WEB-INF/view/admin/tasks/list.html
@@ -71,7 +71,7 @@
 
     <ul class="actions">
         <li>
-            <a href="#" class="abutton">Создать новую задачу</a>
+            <a th:href="@{/tasks/add}" class="abutton">Создать новую задачу</a>
         </li>
     </ul>
 </div>
