Added support for .gif images

--- a/src/main/webapp/WEB-INF/view/admin/tasks/edit.html
+++ b/src/main/webapp/WEB-INF/view/admin/tasks/edit.html
@@ -73,7 +73,7 @@
                 </td>
                 <td>
                     <input type="file" id="image" th:field="*{imageFileName}"
-                           accept="image/png, image/jpeg"/>
+                           accept="image/png, image/jpeg, image/gif">
                     <br/>
                     <label for="width" style="width: 60px">Ширина:</label>
                     <input type="text" id="width" th:field="*{width}" style="width: 15%">
