--- a/src/main/webapp/WEB-INF/view/admin/directories/diplomas/edit.html
+++ b/src/main/webapp/WEB-INF/view/admin/directories/diplomas/edit.html
@@ -79,7 +79,7 @@
 
             <div class="mt-2">
                 <img th:src="${'data:image/jpeg;charset=utf-8;base64,' + diploma.oldImage}"
-                     th:onerror="'this.src=\'' + @{/img/diploms/image-not-found.png} + '\';'"
+                     th:onerror="'this.src=\'' + @{/img/image-not-found.png} + '\';'"
                      alt="#" style="width: 300px; height: auto;"/>
             </div>
 
