--- a/src/main/webapp/WEB-INF/view/admin/tasks/tasks-table.html
+++ b/src/main/webapp/WEB-INF/view/admin/tasks/tasks-table.html
@@ -11,25 +11,42 @@
 
         <!--/*@thymesVar id="taskList" type="java.util.List<ru.spbu.distolymp.dto.admin.tasks.tasks.TaskListDto>"*/-->
         <tr th:each="task, iter : ${taskList}">
-            <td th:text="${iter.index + 1}"></td>
+            <td th:text="${iter.index + 1}" style="text-align: center; vertical-align: middle"></td>
+
             <td th:if="${task.prefix != null}" th:text="${task.prefix} + ':&#13' + ${task.title}"
                 style="white-space: pre; vertical-align: middle"></td>
             <td th:unless="${task.prefix != null}" th:text="${task.title}"
                 style="white-space: pre; vertical-align: middle"></td>
+
             <td th:text="${task.status}" style="text-align: center; vertical-align: middle"></td>
+
             <td th:if="${task.status} == 'Архив'" style="text-align: center; vertical-align: middle">
                 <a href="#" class="abutton">просмотр</a>
-                <a href="#" class="abutton"
-                   onclick="return window.confirm('Вы уверены?')">разархивировать</a>
+                <a href="#" class="abutton">разархивировать</a>
             </td>
-            <td th:unless="${task.status} == 'Архив'" style="text-align: center; vertical-align: middle">
+            <td th:unless="${task.status} == 'Архив'"
+                style="text-align: center; vertical-align: middle">
                 <a href="#" class="abutton">просмотр</a>
                 <a th:href="@{/tasks/edit/{id}(id=${task.id})}" class="abutton">редактировать</a>
                 <a href="#" class="abutton">копировать</a>
-                <a th:href="@{/tasks/delete/{id}(id=${task.id})}" class="abutton"
-                   onclick="return window.confirm('Вы уверены?')">удалить</a>
-                <a href="#" class="abutton"
-                   onclick="return window.confirm('Вы уверены?')">архивировать</a>
+                <a href="#" class="abutton" data-toggle="modal" data-target="#deleteConfirmation">удалить</a>
+                <div id="deleteConfirmation" class="modal fade" tabindex="-1" role="dialog"
+                     aria-labelledby="deleteConfirmationPopup" aria-hidden="true">
+                    <div class="modal-dialog">
+                        <div class="modal-content">
+                            <div class="modal-header">
+                                <h6 class="modal-title">Удалить задачу?</h6>
+                                <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                                    <span aria-hidden="true">&times;</span>
+                                </button>
+                            </div>
+                            <div class="modal-footer">
+                                <button type="button" class="btn btn-danger" data-dismiss="modal">Отмена</button>
+                                <a th:href="@{/tasks/delete/{id}(id=${task.id})}" class="btn btn-success">Ок</a>
+                            </div>
+                        </div>
+                    </div>
+                </div>
             </td>
         </tr>
     </table>
